# rilevazioni_sopraluogo_app

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  setup.sh  tsconfig.app.json  vite.config.ts
lib-tauri/app_api/: Cargo.toml
lib-tauri/app_api/src/: command.rs  events_payload.rs  lib.rs
lib-tauri/app_core/: Cargo.toml
lib-tauri/app_core/src/: constants.rs  lib.rs
lib-tauri/app_data_processing/: Cargo.toml
lib-tauri/app_data_processing/src/import/: dataframe.rs  id_generator.rs  mod.rs
lib-tauri/app_database/: .env.example  Cargo.toml
lib-tauri/app_database/src/: lib.rs
lib-tauri/app_database/src/database/: database_manager.rs  error.rs  mod.rs
lib-tauri/app_database/src/tests/: common.rs  mod.rs
lib-tauri/app_error/: Cargo.toml
lib-tauri/app_error/src/: database_error.rs  error.rs  lib.rs
lib-tauri/app_interface/: Cargo.toml
lib-tauri/app_interface/src/: lib.rs
lib-tauri/app_models/: Cargo.toml  diesel.toml
lib-tauri/app_models/migrations/2025-07-01-075534_create_edificio/: down.sql
lib-tauri/app_models/migrations/2025-07-01-092719_create_stanza/: up.sql
lib-tauri/app_models/migrations/2025-07-01-095140_create_infisso/: down.sql  up.sql
lib-tauri/app_models/migrations/2025-07-01-095154_create_stanza_con_infissi/: down.sql  up.sql
lib-tauri/app_models/migrations/2025-07-01-095209_create_annotazioni/: down.sql  up.sql
lib-tauri/app_models/migrations/2025-07-01-095216_create_fotovoltaico/: up.sql
lib-tauri/app_models/migrations/2025-07-01-095223_create_utenze/: down.sql  up.sql
lib-tauri/app_models/migrations/2025-07-02-074045_create_dati_stanza_view/: up.sql
lib-tauri/app_models/src/: lib.rs  models.rs  schema.rs
lib-tauri/app_services/: Cargo.toml
lib-tauri/app_services/src/: lib.rs
lib-tauri/app_services/src/dao/: annotazione_edificio_dao.rs  annotazione_infisso_dao.rs  annotazione_stanza_dao.rs  climatizzazione_dao.rs  dati_stanze_view_dao.rs  edificio_dao.rs  fotovoltaico_dao.rs  illuminazione_dao.rs  infisso_dao.rs  materiale_infisso_dao.rs  mod.rs  stanza_dao.rs  stanze_con_infissi_dao.rs  tipo_infisso_dao.rs  utenze_dao.rs  utils.rs  vetro_infisso_dao.rs
lib-tauri/app_services/src/dto/: annotazione_dto.rs  climatizzazione_dto.rs  edificio_dto.rs  fotovoltaico_dto.rs  illuminazione_dto.rs  infisso_dto.rs  materiali_infisso_dto.rs  mod.rs  stanza_dto.rs  tipo_dto.rs  tipo_infisso_dto.rs  utenze_dto.rs  vetro_infisso_dto.rs
lib-tauri/app_services/src/service/: annotazione_service.rs  edificio_service.rs  fotovoltaico_service.rs  infisso_service.rs  mod.rs  stanza_service.rs  type_service.rs  utenze_service.rs
lib-tauri/app_state/: Cargo.toml
lib-tauri/app_state/src/: lib.rs  selected_edificio.rs
lib-tauri/app_state/src/database/: database_manager.rs  mod.rs  utils.rs
lib-tauri/app_state/src/tests/: database.rs
lib-tauri/app_task_background/: Cargo.toml
lib-tauri/app_task_background/src/: lib.rs  task_manager.rs  tasks.rs
lib-tauri/app_utils/: Cargo.toml
lib-tauri/app_utils/src/: lib.rs  test.rs
lib-tauri/app_utils/src/test/: mod.rs  utils.rs
migration_data/: Cargo.toml
migration_data/migrations/: migrate_sqlite.sql
migration_data/migrations/postgres/2025-07-01-075534_create_edificio/: up.sql
migration_data/migrations/postgres/2025-07-01-091451_create_types/: down.sql  up.sql
migration_data/migrations/postgres/2025-07-01-092719_create_stanza/: up.sql
migration_data/migrations/postgres/2025-07-01-095140_create_infisso/: up.sql
migration_data/migrations/sqlite/2025-07-14-091451_create_types/: up.sql
migration_data/src/: errors.rs  main.rs  migrations.rs
src-tauri/: .env.example  .gitignore  Cargo.toml  app.manifest  build.rs  diesel.toml  docker-compose.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-07-01-092719_create_stanza/: down.sql  up.sql
src-tauri/migrations/2025-07-01-095140_create_infisso/: up.sql
src-tauri/resources/: query_create_database.sql  type.json
src-tauri/scripts/: setup-dev.sh
src-tauri/src/: command.rs  constants.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/app_traits/: dao.rs  dto.rs  entity.rs  mod.rs  service.rs  sql_executor.rs  sql_params.rs
src-tauri/src/dao/: annotazione_edificio_dao.rs  annotazione_infisso_dao.rs  annotazione_stanza_dao.rs  climatizzazione_dao.rs  commento_edificio_dao.rs  commento_infisso_dao.rs  commento_stanza_dao.rs  dati_stanze_view_dao.rs  edificio_dao.rs  entity.rs  fotovoltaico_dao.rs  illuminazione_dao.rs  infisso_dao.rs  mat_min_eff_stanza_view_dao.rs  materiale_infisso_dao.rs  mod.rs  mq_infissi_view_dao.rs  stanza_dao.rs  stanze_con_infissi_dao.rs  tipo_infisso_dao.rs  utenze_dao.rs  utils.rs  vet_min_eff_stanza_view_dao.rs  vetro_infisso_dao.rs
src-tauri/src/database/: database.rs  database_connection.rs  database_manager.rs  db.rs  error.rs  infissi_table.rs  migrations.rs  mod.rs  model.rs  query_builder.rs  stanze_con_infissi_table.rs  stanze_table.rs  type_tables.rs  utils.rs
src-tauri/src/db/: database.rs  mod.rs  utils.rs
src-tauri/src/dto/: annotazione_dto.rs  climatizzazione_dto.rs  edificio_dto.rs  fotovoltaico_dto.rs  illuminazione_dto.rs  infisso_dto.rs  materiali_infisso_dto.rs  mod.rs  stanza_dto.rs  tipo_dto.rs  tipo_infisso_dto.rs  utenze_dto.rs  utils.rs  vetro_infisso_dto.rs
src-tauri/src/entities/: annotazione_edificio.rs  annotazione_infisso.rs  annotazione_stanza.rs  climatizzazione.rs  edificio.rs  fotovoltaico.rs  illuminazione.rs  infisso.rs  materiale_infisso.rs  mod.rs  stanza.rs  stanze_con_infissi.rs  tipo_infisso.rs  utenza.rs  utils.rs  vetro_infisso.rs  views.rs
src-tauri/src/service/: annotazione_service.rs  edificio_service.rs  export_excel.rs  fotovoltaico_service.rs  infisso_service.rs  mod.rs  stanza_service.rs  type_service.rs  utenze_service.rs  utils.rs
src-tauri/src/test/: mod.rs  parser_insert_stanza.rs
src-tauri/src/utils/: error.rs  event_emit.rs  mod.rs  utils.rs
src-tauri/test/: insert_data.sql  query.sql  test.db
(+201 files in other folders)
