[workspace]
members = ["src-tauri",
    "lib-tauri/app_core",
    "lib-tauri/app_database",
    "lib-tauri/app_models",
    "lib-tauri/app_api",
    "lib-tauri/app_services",
    "lib-tauri/app_error", "lib-tauri/app_utils", "lib-tauri/app_interface",
]
resolver = "3"
exclude = ["migration_data"]

[workspace.package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mattia Frigiola"]
license = "MIT"
repository = "https://github.com/Sir-Vlad/rilevazioni_sopraluogo_app"
edition = "2021"
rust-version = "1.85.0"

[workspace.dependencies]
# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Database
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "chrono", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Tauri and plugins
tauri = { version = "2.3.1", features = ["devtools", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2.0.0-rc"

# Logging
log = "0.4.27"

# File system
dirs-next = "2.0.0"

# Errors
thiserror = "2.0.12"

# Miscelaneous
tokio = { version = "1.46.1", features = ["time"] }
async-trait = "0.1.88"
chrono = "0.4.41"
polars = "0.50.0"
calamine = "0.29.0"

# Testing
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
