[workspace]
members = ["src-tauri",
    "lib-tauri/app_core",
    "lib-tauri/app_database",
    "lib-tauri/app_models",
    "lib-tauri/app_api",
    "lib-tauri/app_services",
    "lib-tauri/app_error", "lib-tauri/app_utils", "lib-tauri/app_interface",
]
resolver = "3"
exclude = ["migration_data"]

[workspace.package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mattia Frigiola"]
license = "MIT"
repository = "https://github.com/Sir-Vlad/rilevazioni_sopraluogo_app"
edition = "2021"
rust-version = "1.85.0"

[workspace.dependencies]
# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Database
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "chrono", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Tauri and plugins
tauri = { version = "2.3.1", features = ["devtools", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2.0.0-rc"

# Logging
log = "0.4.27"

# File system
dirs-next = "2.0.0"

# Errors
thiserror = "2.0.12"

# Miscelaneous
tokio = { version = "1.46.1", features = ["time"] }
async-trait = "0.1.88"
chrono = "0.4.41"
polars = "0.50.0"
calamine = "0.29.0"

# Testing
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }

# Profilo di sviluppo (per debug e sviluppo generale)
[profile.dev]
opt-level = 0          # Nessuna ottimizzazione per compilazione veloce
debug = true           # Include simboli di debug
debug-assertions = true # Mantiene le assertion per debug
overflow-checks = true # Controlla overflow in debug
lto = false           # No Link Time Optimization
codegen-units = 256   # Massima parallelizzazione per compilazione veloce
incremental = true    # Compilazione incrementale abilitata

# Profilo per test (veloce ma con alcune ottimizzazioni)
[profile.test]
opt-level = 1         # Ottimizzazione leggera per test più veloci
debug = true          # Mantiene debug per analisi errori
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true

# Profilo di release per produzione (massimamente ottimizzato)
[profile.release]
opt-level = 3         # Massima ottimizzazione
debug = false         # Nessun simbolo di debug
debug-assertions = false
overflow-checks = false
lto = "fat"          # Link Time Optimization completa
codegen-units = 1    # Una sola unità per migliori ottimizzazioni
panic = "abort"      # Abort invece di unwind per binari più piccoli
strip = true         # Rimuove simboli per ridurre dimensione

# Profilo personalizzato per test di performance
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"         # LTO leggera per bilanciare velocità compilazione/esecuzione
codegen-units = 16