[package]
name = "migration_data"
version = "0.1.0"
edition = "2024"

[dependencies]
app_models = { path = "../lib-tauri/app_models" }

diesel = { version = "2.2.12", features = ["r2d2", "postgres", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
tokio = "1.47.0"
dirs-next = "2.0.0"

# Errors
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
tempfile = "3.20.0"