[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mattia Frigiola"]
license = "MIT"
repository = "https://github.com/Sir-Vlad/rilevazioni_sopraluogo_app"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"
tauri-plugin-log = "2.0.0-rc"

# Tauri and plugins
tauri = { version = "2.3.1", features = ["devtools", "test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Database
diesel = { version = "2.2.11", features = ["postgres", "r2d2", "chrono", "sqlite"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }

# Data processing
polars = { version = "0.46.0", features = ["sql", "lazy"] }
calamine = "0.26.1"
itertools = "0.14.0"
rust_xlsxwriter = "0.85.0"

# Filesystem and utils
dirs-next = "2.0.0"
zip = "=2.5.0"
thiserror = "2.0.12"
chrono = "0.4.41"

tokio = { version = "1.46.1", features = ["time"] }
async-trait = "0.1.88"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
tokio-test = "0.4.4"
tempfile = "3.20.0"

[package.metadata.bundle.windows]
manifest = "app.manifest"
