[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mattia Frigiola"]
license = "MIT"
repository = "https://github.com/Sir-Vlad/rilevazioni_sopraluogo_app"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
# Internal library
app_core = { path = "../lib-tauri/app_core" }

# Tauri and plugins
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-store = { workspace = true }

# Database
dotenvy = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

