[package]
name = "app_api"
version = "0.1.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app_state = { path = "../app_state" }
app_services = { path = "../app_services" }
app_utils = { path = "../app_utils", features = ["interface"], default-features = false }

serde_json = { workspace = true }
tauri = { workspace = true }