[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
app_models = { path = "../app_models" }
app_state = { path = "../app_state" }
app_api = { path = "../app_api" }
app_services = { path = "../app_services" }

# Tauri e plagins
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }

# File system
dirs-next = { workspace = true }

# Logging
log = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"