[package]
name = "app_database"
version = "0.1.0"
edition = "2024"

[dependencies]
app_error = { path = "../app_error" }
app_interface = { path = "../app_interface", features = ["database"] }

serde = { workspace = true }
diesel = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
app_utils = { path = "../app_utils", features = ["test-utils"] }