[package]
name = "app_error"
version = "0.1.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "2.0.12"
tauri = { workspace = true }
diesel = { workspace = true }
polars = { workspace = true }
calamine = { workspace = true }
tokio = { workspace = true }