[package]
name = "app_models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
diesel_migrations = { workspace = true }

chrono = "0.4.41"

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tempfile = "3.20.0"