[package]
name = "app_task_background"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app_data_processing = { path = "../app_data_processing" }
app_models = { path = "../app_models" }
app_services = { path = "../app_services" }
app_state = { path = "../app_state" }
app_utils = { path = "../app_utils", features = ["service"] }

serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
diesel = { workspace = true }

tauri = { workspace = true }
tauri-plugin-store = { workspace = true }

[dev-dependencies]
env_logger = "0.11.8"