[package]
name = "app_utils"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app_interface = { path = "../app_interface" }
app_error = { path = "../app_error" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
tokio = { workspace = true }
libc = "0.2.174"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tauri = { workspace = true }

[dev-dependencies]

[features]
default = []
interface = []
database = [
    "interface",
    "app_interface/database"
]
dao = [
    "interface",
    "app_interface/dao"
]
dto = [
    "interface",
    "app_interface/dto"
]
service = [
    "interface",
    "app_interface/services"
]
error = []
test-utils = []